Ready for z3 model parsing